[package]
name = "azabell-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes", "unstable"] }
tide = "0.16.0"
sqlx = { version = "0.7.1", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"] }
mysql = { version = "24.0.0", default-features = false, features = ["minimal", "rustls-tls"] }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
chrono = "0.4.26"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
uuid = "1.4.1"
thiserror = "1.0.47"
